--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,5 +1,5 @@
 body {
-  padding: 50px;
+  /*padding: 50px;*/
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
 
@@ -13,4 +13,11 @@ div.list-thumb{
   height: 100px;
   background-size: cover;
   background-position: center;
+  margin: 5px;
+}
+
+div.size-control{
+  position: fixed;
+  right: 0;
+  top: 0;
 }
