--- a/views/index.jade
+++ b/views/index.jade
@@ -1,8 +1,7 @@
 extends layout
 
 block content
-  h1= title
-  p Welcome
+
   if error
     p #{error}
   else
@@ -12,8 +11,14 @@ block content
       a(href='/?dir=#{folder}')= folderComponents[folderComponents.length-1]
       br
 
-    h2 Files
+    h1 Files
     each file in files
       - var fileComponents = file.split('/')
       a(href='/view?path=#{file}')
         div.list-thumb(style='background-image:url("/image?path=#{encodeURIComponent(file)}")')
+
+    div.size-control
+      button 100
+      button 200
+      button 400
+      button 600
