--- a/views/view.jade
+++ b/views/view.jade
@@ -13,3 +13,5 @@ block content
     if next
       a(href='/view?path=#{next}')
         div#next next
+    a(href='/?dir=#{parentDir}')
+      div#back back
