--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -12,6 +12,10 @@ a.folder:first-child{
   color: #666;
 }
 
+h1 {
+  margin-top: 60px;
+}
+
 div.list-thumb{
   float: left;
   width: 100px;
@@ -25,6 +29,17 @@ div.size-control{
   position: fixed;
   right: 0;
   top: 0;
+}
+div.size-control button{
+  max-height : 30px;
+}
+div.page-control{
+  position: fixed;
+  right: 0;
+  top: 30px;
+}
+div.page-control a{
+    margin-left : 20px;
 }
 
 div.view-nav{
